# failguard

./: README.md  pyproject.toml
failguard/: __init__.py  core.py
tests/: test_edge_cases.py  test_failguard.py  test_thread_safety.py
